[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/639463__timouse__piano-loop-4.wav" type="AudioStream" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://images/bg.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://Fonts/Squares.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Audio/neg_score.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/pos_score.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 575.5, 19.6563 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 114.5, 5.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 272 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 7 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="bg" parent="." instance=ExtResource( 5 )]

[node name="red" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = 24.0
margin_right = 16.0
margin_bottom = 568.0
color = Color( 1, 0, 0, 0.392157 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 20, 300 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 512, 4.5625 )
shape = SubResource( 1 )

[node name="WallBottom2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom2"]
position = Vector2( 512, 587.875 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 511.5, 587.656 )
shape = SubResource( 1 )

[node name="green" type="ColorRect" parent="."]
margin_left = 1008.0
margin_top = 24.0
margin_right = 1048.0
margin_bottom = 568.0
color = Color( 0, 0.627451, 0.0392157, 0.392157 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 1004, 300 )

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -37.381
autoplay = true

[node name="plateforms" type="StaticBody2D" parent="."]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="plateforms"]
position = Vector2( 509, 477 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="plateforms"]
position = Vector2( 509, 382 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="plateforms"]
position = Vector2( 507, 122 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="plateforms"]
position = Vector2( 506.5, 218.5 )
shape = SubResource( 2 )

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 300 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -8, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( 0, 296 )
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1048, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( -12, 288 )
shape = SubResource( 3 )

[node name="PlayerScore" type="Label" parent="."]
margin_left = 320.0
margin_top = 264.0
margin_right = 365.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="EnemyScore" type="Label" parent="."]
margin_left = 664.0
margin_top = 264.0
margin_right = 709.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="TimerNewGame" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LabelTimer" type="Label" parent="."]
margin_left = 312.0
margin_top = -240.0
margin_right = 710.0
margin_bottom = 815.0
custom_fonts/font = SubResource( 6 )
text = "
"
align = 1
valign = 1
uppercase = true

[node name="neg_score" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -24.471

[node name="pos_score" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="fps" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 24.0
text = "60"

[node name="Label" type="Label" parent="."]
margin_left = 440.0
margin_top = 568.0
margin_right = 585.0
margin_bottom = 582.0
text = "Press [SPACE] to Pause"

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="TimerNewGame" to="." method="_on_TimerNewGame_timeout"]
